<resources>
    <string name="app_name">PhotoNet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Saved Printers</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder">PlaceHolder</string>
    <string name="menu_image_thumb">Printer</string>
    <string name="menu_name">Name</string>
    <string name="menu_ip">IP</string>
    <string name="menu_status">Unknown</string>
    <string name="menu_home">Home</string>
    <string name="title_activity_main">PhotoNet</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_details">Details</string>
    <string name="tab_text_1">Details</string>
    <string name="tab_text_2">Files</string>
    <string name="progress">Progress: </string>
    <string name="z_discriptor">Z:</string>
    <string name="time_discriptor">Time:</string>
    <string name="image_of_printer">Image of printer</string>
    <string name="details_status_unknown">UNKNOWN</string>
    <string name="details_name_unknown">Unknown</string>
    <string name="details_file_unknown">Unknown</string>
    <string name="details_ip_default">0.0.0.0</string>
    <string name="details_z_default">1.23</string>
    <string name="details_progress_default">10%</string>
    <string name="details_time_default">604800s</string>
    <string name="title_activity_license">License</string>
    <string name="text_license">License</string>
    <string name="text_contributors">Contributors</string>
    <string name="sgo_web">http://www.sg-o.de</string>
    <string name="developed_by">Developed by Joerg Bayer (SG-O)</string>
    <string name="apache_version">Apache License Version 2.0</string>
    <string name="dependencies">Dependencies</string>
    <string name="manual_hint_up">Move build plate up</string>
    <string name="manual_hint_down">Move build plate down</string>
    <string name="manual_hint_stop">Stop</string>
    <string name="manual_hint_home">Go to home position</string>
    <string name="manual_unavailable">Unavailable at the moment</string>
    <string name="details_hint_pause_resume">Pause or resume</string>
    <string name="details_hint_stop">Stop print</string>
    <string name="printer_settings_cam_bool_webcam">Use Webcam</string>
    <string name="printer_settings_cam_string_url">Video Stream Url</string>
    <string name="printer_settings_cam_verify_description">Verify connection</string>
    <string name="printer_settings_cam_verify_button">Verify</string>
</resources>