<!--
  ~
  ~   Copyright (C) 2022 Joerg Bayer (SG-O)
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Webcam">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="printer_settings_use_webcam"
            app:title="@string/printer_settings_cam_bool_webcam" />
        <EditTextPreference
            app:key="printer_settings_webcam_address"
            app:title="@string/printer_settings_cam_string_url"
            app:useSimpleSummaryProvider="true" />
        <de.sg_o.app.photonet.util.ButtonPreference
            app:title="@string/printer_settings_cam_verify_description"
            app:key="printer_settings_webcam_verify"
            app:button_text="@string/printer_settings_cam_verify_button"/>
    </PreferenceCategory>

</PreferenceScreen>