<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~   Copyright (C) 2022 Joerg Bayer (SG-O)
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageButton
        android:id="@+id/manual_go_up"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/colorBackground"
        android:contentDescription="@string/manual_hint_up"
        app:layout_constraintBottom_toTopOf="@+id/manual_stop"
        app:layout_constraintStart_toStartOf="@+id/manual_stop"
        app:srcCompat="@drawable/ic_baseline_keyboard_double_arrow_up_48" />

    <ImageButton
        android:id="@+id/manual_go_down"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:background="?android:attr/colorBackground"
        android:contentDescription="@string/manual_hint_down"
        app:layout_constraintBottom_toTopOf="@+id/manual_go_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_keyboard_double_arrow_down_48" />

    <ImageButton
        android:id="@+id/manual_go_home"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="32dp"
        android:background="?android:attr/colorBackground"
        android:contentDescription="@string/manual_hint_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/manual_go_down"
        app:srcCompat="@drawable/ic_baseline_home_48" />

    <SeekBar
        android:id="@+id/manual_seekbar_distance"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manual_text_distance" />

    <TextView
        android:id="@+id/manual_text_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/manual_stop"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/colorBackground"
        android:contentDescription="@string/manual_hint_stop"
        app:layout_constraintBottom_toTopOf="@+id/manual_go_down"
        app:layout_constraintStart_toStartOf="@+id/manual_go_down"
        app:srcCompat="@drawable/ic_baseline_stop_circle_48" />

    <TextView
        android:id="@+id/manual_unavailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manual_unavailable"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>